@@ -302,6 +302,12 @@ public:
    */
   void SetStatusCode (StatusCode code);
   /**
+   * Set the association ID.
+   *
+   * \param aid the association ID
+   */
+  void SetAssociationId (uint16_t aid);
+  /**
    * Set the ERP information.
    *
    * \param erpInformation the ERP information
